# GearEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Editor/: CMakeLists.txt  GearEditor.cpp  GearEditor.h  ImGuiBackend.cpp  ImGuiBackend.h  TextureImporter.cpp  main.cpp
Editor/BuiltinResources/Materials/: transparency_test.fs  transparency_test.mat  ui.fs  ui.mat
Editor/GltfImporter/: GltfImporter.cpp  GltfImporter.h  GltfMaterialTemplate.cpp
Editor/Resource/Shaders/: texture.vert  triangle.frag
Editor/Source/: AssetBrowser.cpp  AssetBrowser.h  CameraController.cpp  CameraController.h  ContentWindow.cpp  ContentWindow.h  DebugBackend.cpp  EditorMisc.cpp  EditorMisc.h  EditorSettings.cpp  EditorSettings.h  EditorWindow.h  GearEditor.cpp  GearEditor.h  GltfImporter.cpp  GltfImporter.h  ImGuiBackend.cpp  Inspector.cpp  Inspector.h  LevelEditor.cpp  LevelEditor.h  SceneHierarchy.cpp  SceneHierarchy.h  SceneViewer.cpp  SceneViewer.h  SceneWindow.cpp  SceneWindow.h  TextureImporter.cpp  TextureImporter.h  UI.cpp  UI.h  main.cpp
Editor/Source/GltfImporter/: GltfMaterialTemplate.cpp  GltfMaterialTemplate.h
Editor/Source/TestScene/: AnimationTestScene.cpp  AnimationTestScene.h  MaterialTestScene.cpp  MaterialTestScene.h  ShadowTestScene.cpp  ShadowTestScene.h  SkyAtmosphereTestScene.cpp  SkyAtmosphereTestScene.h  TestScene.h  TransparencyTestScene.cpp  TransparencyTestScene.h
Engine/: CMakeLists.txt  GearEngine.cpp  GearEngine.h
Engine/BuiltinResources/Materials/: debug.mat  fxaa.fs
Engine/BuiltinResources/Shaders/: brdf.fs  common_data.fs  compute_irradiance_map.comp  compute_specular_map.comp  inputs.vs  light_directional.fs  light_indirect.fs  light_punctual.fs  main.fs  material_params.fs  shading_lit.fs  shading_model_standard.fs
Engine/Core/: GearDefine.h
Engine/Input/: InputSystem.cpp
Engine/MaterialCompiler/: ChunkLexeme.h  ChunkLexer.h  CodeGenerator.cpp  CodeGenerator.h  CommonLexeme.h  CommonLexer.h  MaterialBlock.cpp  MaterialBlock.h  MaterialCompiler.cpp  MaterialCompiler.h  ShaderCode.h
Engine/Math/: Geometry.cpp  Math.h
Engine/Renderer/: CopyEngine.cpp  CopyEngine.h  RenderBinder.cpp  RenderBuiltinResource.cpp  RenderBuiltinResource.h  RenderCache.cpp  RenderCache.h  RenderCore.cpp  RenderPath.cpp  RenderResourcePool.cpp  RenderResourcePool.h  RenderScene.cpp  RenderScene.h  RenderShadow.cpp  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h
Engine/Resource/: GpuBuffer.cpp  GpuBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Resource.h  ResourceManager.cpp  ResourceManager.h  Texture.cpp  Texture.h
Engine/Scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h
Engine/Scene/Components/: CCamera.cpp  CCamera.h  CLight.h  CRenderable.cpp  CRenderable.h  CTransform.cpp  CTransform.h  Component.cpp  Component.h
Engine/Source/: GearEngine.cpp  GearEngine.h
Engine/Source/Animation/: AnimationClip.cpp  AnimationClip.h  AnimationInstance.cpp  AnimationInstance.h  AnimationSystem.cpp  AnimationSystem.h  Skeleton.cpp  Skeleton.h
Engine/Source/Application/: BaseApplication.cpp  BaseApplication.h
Engine/Source/Core/: GearDefine.h
Engine/Source/Entity/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Scene.cpp  Scene.h
Engine/Source/Input/: InputSystem.cpp  InputSystem.h
Engine/Source/JobSystem/: JobSystem.cpp  JobSystem.h
Engine/Source/MaterialCompiler/: ArrayParser.h  ChunkLexer.cpp  ChunkParser.h  CodeGenerator.cpp  CodeGenerator.h  CommonLexer.cpp  DictParser.h  Lexeme.h  Lexer.h  MaterialCompiler.cpp  MaterialCompiler.h  ParamParser.h  ShaderCode.h
Engine/Source/Math/: Geometry.cpp  Geometry.h  Math.h
Engine/Source/Platform/: PlatformMisc.cpp  PlatformMisc.h
Engine/Source/RenderPipeline/: BaseStage.cpp  DebugStage.cpp  RenderPipeline.cpp  RenderPipeline.h  ShadowStage.cpp  SkyboxStage.cpp  UiStage.cpp
Engine/Source/RenderUtility/: RenderUtility.cpp  RenderUtility.h
Engine/Source/Renderer/: AtmosphereRender.cpp  CopyEngine.cpp  DebugPass.cpp  PostProcessPass.cpp  RenderBinder.h  RenderCache.cpp  RenderCache.h  RenderCore.cpp  RenderData.cpp  RenderData.h  RenderScene.h  RenderShadow.cpp  RenderTarget.cpp  RenderUtility.cpp  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ShadowPass.cpp  View.cpp  View.h
Engine/Source/Resource/: BuiltinResources.cpp  BuiltinResources.h  GpuBuffer.cpp  GpuBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Engine/Source/UI/: Canvas.cpp  Canvas.h
Engine/Source/Utility/: DataStream.cpp  DataStream.h  Event.h  FileSystem.cpp  FileSystem.h  Flags.h  Hash.cpp  Hash.h  Log.h  Singleton.h  UUID.cpp  UUID.h
Engine/Source/View/: View.cpp  View.h
Engine/Source/Window/: BaseWindow.cpp  BaseWindow.h
Engine/Utility/: Event.h  FileSystem.cpp  FileSystem.h  Hash.h  Module.h  UUID.cpp  UUID.h
Example/: CMakeLists.txt  main.cpp
Example/01_Triangle/: main.cpp
Example/02_Texture/: main.cpp
Example/Resource/Materials/: default.json
Example/Resource/Shaders/: default.vert  vert.spv
GearEngine/: CMakeLists.txt  GearEngine.sln
GearEngine/Example/: main.cpp
GearEngine/GearEngine/: main.cpp
GearEngine/GearEngine/Application/: Application.cpp  Application.h  BaseApplication.cpp  BaseApplication.h  BasePrerequisites.h  Window.cpp  Window.h
GearEngine/GearEngine/Component/: Component.cpp  Component.h  ComponentManager.h  StaticModelComponent.h
GearEngine/GearEngine/Entity/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
GearEngine/GearEngine/Importer/: ImporterManager.h  MaterialImporter.h  MeshImporter.h  TextureImporter.h
GearEngine/GearEngine/Input/: Input.h  KeyCode.h
GearEngine/GearEngine/Material/: Material.h  ShaderVariation.h
GearEngine/GearEngine/Mesh/: Mesh.h
GearEngine/GearEngine/RHI/: Buffer.cpp  Buffer.h  CommandBuffer.h  Framebuffer.h  Image.cpp  IndexBuffer.h  RHI.cpp  RHI.h  RHIBuffer.h  RHICommandBuffer.cpp  RHICommandBuffer.h  RHIDefine.h  RHIDevice.cpp  RHIDevice.h  RHIProgram.cpp  (+22 more)
GearEngine/Source/: Sources.cmake  main.cpp
(+209 files in other folders)
