cmake_minimum_required (VERSION 3.10)
project ("GearEngine")

include_directories(ThirdParty/glm/include)
include_directories(ThirdParty/glfw/include)
include_directories(ThirdParty/stb)
include_directories(ThirdParty/vulkan/include)
include_directories(ThirdParty/glslang/include)
include_directories(ThirdParty/spirv_cross/include)
include_directories(GearEngine/Source)

add_subdirectory (GearEngine)

add_executable (Example Example/main.cpp)
target_link_libraries(Example GearEngine)
target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/vulkan/lib/win32/vulkan-1.lib)

if (CMAKE_BUILD_TYPE MATCHES "Debug")
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glfw/lib/win32/debug/glfw3.lib)
    # glslang
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/debug/glslangd.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/debug/HLSLd.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/debug/OGLCompilerd.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/debug/OSDependentd.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/debug/SPIRVd.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/debug/SPVRemapperd.lib)
    # spirv-cross
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/spirv_cross/lib/win32/debug/spirv-cross-cd.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/spirv_cross/lib/win32/debug/spirv-cross-cored.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/spirv_cross/lib/win32/debug/spirv-cross-cppd.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/spirv_cross/lib/win32/debug/spirv-cross-glsld.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/spirv_cross/lib/win32/debug/spirv-cross-hlsld.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/spirv_cross/lib/win32/debug/spirv-cross-msld.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/spirv_cross/lib/win32/debug/spirv-cross-reflectd.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/spirv_cross/lib/win32/debug/spirv-cross-utild.lib)
else()
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glfw/lib/win32/release/glfw3.lib)
    # glslang
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/release/glslang.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/release/HLSL.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/release/OGLCompiler.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/release/OSDependent.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/release/SPIRV.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/release/SPVRemapper.lib)
    # spirv-cross
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/spirv_cross/lib/win32/release/spirv-cross-c.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/spirv_cross/lib/win32/release/spirv-cross-core.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/spirv_cross/lib/win32/release/spirv-cross-cpp.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/spirv_cross/lib/win32/release/spirv-cross-glsl.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/spirv_cross/lib/win32/release/spirv-cross-hlsl.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/spirv_cross/lib/win32/release/spirv-cross-msl.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/spirv_cross/lib/win32/release/spirv-cross-reflect.lib)
    target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/spirv_cross/lib/win32/release/spirv-cross-util.lib)
endif()