include_directories(Source)
include_directories(ThirdParty/glm/include)
include_directories(ThirdParty/glfw/include)
include_directories(ThirdParty/stb)
include_directories(ThirdParty/vulkan/include)
include_directories(ThirdParty/glslang/include)

include(Source/Sources.cmake)
#add_definitions(-D VK_PROTOTYPES)
add_definitions(-D VK_USE_PLATFORM_WIN32_KHR)
add_definitions(-D NOMINMAX)

add_library(GearEngine STATIC ${GEAR_ENGINE_SRC})

add_executable (Example Example/main.cpp)
target_link_libraries(Example GearEngine)
target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/vulkan/lib/win32/vulkan-1.lib)

if (CMAKE_BUILD_TYPE MATCHES "Debug")
target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glfw/lib/win32/debug/glfw3.lib)
	target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/debug/glslangd.lib)
	target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/debug/HLSLd.lib)
	target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/debug/OGLCompilerd.lib)
	target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/debug/OSDependentd.lib)
	target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/debug/SPIRVd.lib)
	target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/debug/SPVRemapperd.lib)
else()
target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glfw/lib/win32/release/glfw3.lib)
	target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/release/glslang.lib)
	target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/release/HLSL.lib)
	target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/release/OGLCompiler.lib)
	target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/release/OSDependent.lib)
	target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/release/SPIRV.lib)
	target_link_libraries(Example ${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/glslang/lib/win32/release/SPVRemapper.lib)
endif()