include_directories(Source)

include(Source/Sources.cmake)
#add_definitions(-D VK_PROTOTYPES)
#add_definitions(-D VK_USE_PLATFORM_WIN32_KHR)
#add_definitions(-D NOMINMAX)
#add_compile_options(/wd26812)
add_library(GearEngine STATIC ${GEAR_ENGINE_SRC})
target_include_directories(GearEngine INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/Source)
target_link_libraries(GearEngine glm)
target_link_libraries(GearEngine stb)
target_link_libraries(GearEngine glfw_header)
target_link_libraries(GearEngine vulkan_header)
target_link_libraries(GearEngine glslang_header)
target_link_libraries(GearEngine spirv_cross_header)